--- a/Index.html
+++ b/Index.html
@@ -10,5 +10,7 @@ git config user.email josebaselkoala@gmail.com
 <body>
     <h1>Instalar Github</h1>
     <p>Si no no funciona xd lol.</p>
+    <h2>Despues tenemos que abrirlo y dare al boton del gib</h2>
+    <p>y tambien conectarlos</p>
 </body>
 </html>
